--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "description": "hyperf common library",
   "license": "Apache-2.0",
   "require": {
-    "php": ">=7.2",
+    "php": ">=7.4",
     "ext-swoole": ">=4.5",
     "ext-pdo": "*",
     "ext-redis": "*",
@@ -12,21 +12,21 @@
     "ext-xml": "*",
     "ext-bcmath": "*",
     "ext-openssl": "*",
-    "hyperf/cache": "~2.0.0",
-    "hyperf/command": "~2.0.0",
-    "hyperf/config": "~2.0.0",
-    "hyperf/db-connection": "~2.0.0",
-    "hyperf/framework": "~2.0.0",
-    "hyperf/guzzle": "~2.0.0",
-    "hyperf/http-server": "~2.0.0",
-    "hyperf/websocket-server": "~2.0.0",
-    "hyperf/logger": "~2.0.0",
-    "hyperf/memory": "~2.0.0",
-    "hyperf/process": "~2.0.0",
-    "hyperf/redis": "~2.0.0",
-    "hyperf/constants": "~2.0.0",
-    "hyperf/validation": "~2.0.0",
-    "hyperf/utils": "~2.0.0",
+    "hyperf/cache": "2.1.*",
+    "hyperf/command": "2.1.*",
+    "hyperf/config": "2.1.*",
+    "hyperf/db-connection": "2.1.*",
+    "hyperf/framework": "2.1.*",
+    "hyperf/guzzle": "2.1.*",
+    "hyperf/http-server": "2.1.*",
+    "hyperf/websocket-server": "2.1.*",
+    "hyperf/logger": "2.1.*",
+    "hyperf/memory": "2.1.*",
+    "hyperf/process": "2.1.*",
+    "hyperf/redis": "2.1.*",
+    "hyperf/constants": "2.1.*",
+    "hyperf/validation": "2.1.*",
+    "hyperf/utils": "2.1.*",
     "firebase/php-jwt": "^5.2",
     "ipip/db": "^1.0",
     "hashids/hashids": "^4.0",
